--- a/estilo/style.css
+++ b/estilo/style.css
@@ -90,7 +90,7 @@
     }
 
     section#img02{
-        background-image: url('imagens/background002.jpg');
+        background-image: url('');
         background-size: cover;
     }
     
