--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
     }
 
     section#img02{
-        background-image: url('');
+        background-image: url('imagens/background001.jpg');
         background-size: cover;
     }
     
